# deskMATE

./: .env  .env.example  .gitignore  CHANGELOG.md  DESKTOP_APP_GUIDE.md  FINAL_FIX.md  FINAL_FIXES.md  FIXES_SUMMARY.md  QUERY_URL_EXPLANATION.md  QUICK_FIX.md  README.md  SYSTEM_INFO_UI.md  UPDATE_SUMMARY.md  deskmate.db  notepad.txt  pyproject.toml  requirements.txt
app/: main.py
app/api/: agent.py  files.py  jobs.py
app/core/: agent_core.py  executor.py  llm_client.py  schema.py
app/db/: database.py  models.py
app/plugins/: email_generator.py  file_reader.py  shell_runner.py  system_control.py
frontend/: streamlit_app.py
frontend-desktop/: index.html  package-lock.json  package.json
frontend-desktop/electron/: main.js
frontend-desktop/src/: App.css  App.jsx  SystemInfo.css  index.css
tests/: sample_document.txt  test_agent.py
